# mk

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: mode7_track_fix_plan.md  mstan_recompiler_spike.md  own_recompiler_design.md  recomp_frame_model_plan.md  smk_flow_re.md
include/hal/: apu.h  dma.h  dsp1.h  io.h  ppu.h
include/platform/: input.h  sdl_backend.h
include/recomp/: cpu.h  func_table.h  memory.h
include/smk/: cpu_ops.h  functions.h
src/hal/: apu.c  dma.c  dsp1.c  io.c  ppu.c
src/main/: main.c
src/platform/: input.c  sdl_backend.c
src/recomp/: cpu.c  func_table.c  memory.c  smk_autogen.c  smk_boot.c  smk_init.c  smk_title.c
tools/: diff_snapshots.py  lakesnes_ref.c  oam_dumper.c
tools/analyze/: rom_info.py
tools/bizhawk/: README.md  flow_driver.lua
tools/disasm/: disasm65816.py
tools/mesen/: SETUP.md  dump_snapshot.lua  func_finder.lua  hw_logger.lua  parse_functions.py  parse_trace.py  trace_capture.lua  watch_menu.lua
tools/recomp/: autogen.py  batch.py  gen_set.py  regen_inplace.py
tools/recomp/profiles/: default_set.prof
tools/snes9x/: watch_menu.lua
